force-app/main/default/objects/UserIds__c/UserIds__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>User Ids</label>
</CustomObject>