force-app/main/default/objects/UserIds__c/fields/Admin_User__c.field-meta.xml
<CustomField>
    <fullName>Admin_User__c</fullName>
    <label>Admin User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>