force-app/main/default/objects/UserIds__c/fields/Fabio__c.field-meta.xml
<CustomField>
    <fullName>Fabio__c</fullName>
    <label>Fabio</label>
    <length>18</length>
    <type>Text</type>
</CustomField>