force-app/main/default/objects/UserIds__c/fields/IntegrationRetry__c.field-meta.xml
<CustomField>
    <fullName>IntegrationRetry__c</fullName>
    <label>Integration Retry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>