force-app/main/default/objects/UserIds__c/fields/Sabrina__c.field-meta.xml
<CustomField>
    <fullName>Sabrina__c</fullName>
    <label>Sabrina</label>
    <length>18</length>
    <type>Text</type>
</CustomField>